--- a/package.json
+++ b/package.json
@@ -16,31 +16,47 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.39",
+    "@react-navigation/native-stack": "^7.3.10",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@supabase/supabase-js": "^2.49.4",
+    "dayjs": "^1.11.13",
+    "expo": "~52.0.46",
+    "expo-apple-authentication": "~7.1.3",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
-    "expo-dev-client": "~5.0.14",
+    "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "^16.0.6",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.19",
-    "expo-splash-screen": "~0.29.22",
+    "expo-localization": "^16.0.1",
+    "expo-sensors": "^14.0.2",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.8",
+    "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-i18next": "^15.4.1",
+    "react-native": "0.76.9",
     "react-native-android-widget": "^0.15.1",
+    "react-native-circular-progress": "^1.4.1",
+    "react-native-date-picker": "^5.0.12",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-health-connect": "^3.3.2",
+    "react-native-otp-entry": "^1.8.4",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.8.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
@@ -49,6 +65,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "expo-build-properties": "^0.13.2",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
