--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dayjs": "^1.11.13",
     "expo": "~52.0.46",
     "expo-apple-authentication": "~7.1.3",
+    "expo-background-fetch": "~13.0.6",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.20",
@@ -35,11 +36,13 @@
     "expo-image-picker": "^16.0.6",
     "expo-linking": "~7.0.5",
     "expo-localization": "^16.0.1",
+    "expo-router": "^4.0.20",
     "expo-sensors": "^14.0.2",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
+    "expo-task-manager": "~12.0.6",
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -55,6 +58,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-slider-intro": "^3.0.1",
     "react-native-svg": "^15.8.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
